# project-context

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/project_context/: __init__.py  main.py  tree.py  utils.py
tests/: test_cli.py  test_main.py  test_tree.py  test_utils.py
