[project]
name = "project-context"
version = "0.1.0"
description = "Generate LLM-friendly markdown from your project files."
readme = "README.md"
authors = [
    { name = "Jeff Moore", email = "jeffreymm@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
]

[project.scripts]
project-context = "project_context.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
]
